[gd_scene load_steps=2 format=3 uid="uid://c662orkel0eav"]

[ext_resource type="Script" path="res://addons/skilltreeeditor/skill_node/skill_root_node.gd" id="1_sax1t"]

[node name="SkillRootNode" type="GraphNode"]
anchors_preset = -1
anchor_right = 0.268
anchor_bottom = 0.54
offset_right = 0.263977
offset_bottom = 0.0799866
grow_horizontal = 2
grow_vertical = 2
resizable = true
title = "Skill"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_sax1t")
label_color = Color(0.184314, 1, 1, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Skill:"

[node name="SkillIcon" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 3

[node name="SkillName" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Melee"

[node name="SelectSkillButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Select Skill"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/SelectSkillButton" to="." method="_on_select_skill_button_pressed"]
